--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
         "sass": "node-sass --watch ./public/scss/style.scss ./public/css/style.css --source-map ./public/css/style.css.map"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "chart.js": "^2.9.4",
         "next": "12.0.4",
         "node-sass": "^6.0.1",
         "react": "17.0.2",
         "react-chartjs-2": "^2.11.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-hot-toast": "^2.4.0",
+        "react-toast-notifications": "^2.5.1",
+        "react-toastify": "^9.0.8"
     }
 }
